website will have to do for older versions.

# 3.2.55 (unreleased) #

This release contains contributions from (alphabetically by first name):
 - No external contributors yet

## Core ##
 - No core changes yet

## Modules ##
 - *users* module has rearranged configuration for setting the hostname.
   Legacy settings are preserved, but produce a warning. Please see
   `users.conf` for details.


# 3.2.54 (2022-03-21) #

This release contains contributions from (alphabetically):
 - Bob van der Linden (new contributor! Welcome!)
 - El-Wumbus (new contributor! Welcome!)
 - Evan James
 - Santosh Mahto (new contributor! Welcome!)

## Core ##
 - During the installation ("exec") step, while the slideshow is displayed,
   there is also a button to show the scrolling installation log as it
   is written. (Thanks Bob)

## Modules ##
 - *fstab* module correctly handles empty UUID strings. (Thanks Evan)
 - *partition* module no longer forgets configured partition-layouts.
   It also respects configured partition labels better. (Thanks Santosh)


# 3.2.53 (2022-03-04) #

This release contains contributions from (alphabetically by first name):
 - Huang Jia Wen (new contributor! Welcome!)

## Core ##
 - Automount-manipulation (to switch off KDE Plasma automounting new devices)
   now logs slightly more as it works. Defaults have changed in KDE Plasma
   5.24 and it turns out the automount-manipulation does not work well.
   Distro's are encouraged to turn off automount in the live ISO (see #1885).

## Modules ##
 - *bootloader* now knows about loongarch64 and can install suitable EFI
   files for this CPU type. (Thanks Huang Jia Wen)
 - Progress reporting for `pacman` from the *packages* module has been switched
   off. The progress reporting works under low load, but there are many reports
   of it crashing (from XeroLinux and from Evan James, who has been debugging
   the issue) during a regular installation with thousands of updates. This