@@ -20,7 +20,9 @@ This release contains contributions from (alphabetically by first name):
  - *users* module has rearranged configuration for setting the hostname.
    Legacy settings are preserved, but produce a warning. Please see
    `users.conf` for details.
-
+ - *users* module has a new hostname.location setting, *Transient*, which
+   will force the installed system to transient-hostname-setting by removing
+   the file `/etc/hostname`.
 
 # 3.2.54 (2022-03-21) #
 
